--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,29 @@
 /sofa_c-20120301_a
 /sofa_c-20131202_b
 /.DS_Store
+
+*.class
+*.log
+
+# sbt specific
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+
+# Scala-IDE specific
+.scala_dependencies
+.cache
+.classpath
+.project
+.worksheet/
+bin/
+.settings/
+
+# OS X
+.DS_Store
+
+# Ctags
+.tags
